SERVER-57944 Ensure stale state is cleared after a refresh attempt

... in the chunk manager targeter.